syntax = "proto3";
import "google/protobuf/timestamp.proto";
package muni.api;

option java_outer_classname = "Model"; //muni.api.Model
option java_generic_services = false; //default, prevents complex generic

//Listed in the order of dependency
message PostalAddress{
  google.protobuf.Timestamp createTime = 1;
  google.protobuf.Timestamp updateTime = 2;
  string id=3;
  //
  string streetNum = 4;
  string streetName =5;
  string city = 6;
  string province = 7;
  string country = 8;
  string postalCode=9;
  //geo
  double lat=10;
  double lon=11;
}

message Person{
  google.protobuf.Timestamp createTime = 1;
  google.protobuf.Timestamp updateTime = 2;
  string id=3;
  //
  string firstName = 4;
  string lastName= 5;
  //communication_channels
  string phone = 6;
  string email = 7;
  PostalAddress postalAddress = 8;
}

message Organization {
  google.protobuf.Timestamp createTime = 1;
  google.protobuf.Timestamp updateTime = 2;
  string id=3;
  //
  string name =4;
  string phone = 5;
  string email = 6;
  PostalAddress postalAddress =7;
  Person contactPerson = 8;
  string website = 9;
}



message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}